fix(yacht/product-preview) anchor padding, image z-index

--- a/app/blocks/product-preview/product-preview.scss
+++ b/app/blocks/product-preview/product-preview.scss
@@ -10,6 +10,7 @@
     height: 60px;
     margin-right: 14px;
     position: relative;
+    z-index: 1;
   }
 
   .product-text {
